--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -2,8 +2,16 @@
   "name": "@nest-devtools/shared",
   "version": "0.1.0",
   "description": "Tipos TypeScript compartilhados para Nest DevTools Telescope",
+  "type": "module",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
+  "exports": {
+    ".": {
+      "import": "./dist/index.js",
+      "require": "./dist/index.js",
+      "types": "./dist/index.d.ts"
+    }
+  },
   "files": [
     "dist",
     "README.md",
@@ -14,7 +22,7 @@
     "dev": "tsc --watch",
     "clean": "rm -rf dist",
     "typecheck": "tsc --noEmit",
-    "prepublishOnly": "pnpm build"
+    "prepublishOnly": "bun run build"
   },
   "keywords": [
     "nestjs",
@@ -43,4 +51,3 @@
     "typescript": "^5.3.3"
   }
 }
-
