--- a/netlify.toml
+++ b/netlify.toml
@@ -1,25 +1,32 @@
-# Netlify configuration for Backend deployment
+# Netlify configuration for Frontend deployment
 
 [build]
-  command = "cd packages/backend && pnpm install && pnpm build"
-  publish = "packages/backend/dist"
-  functions = "packages/backend/dist"
+  command = "pnpm install && pnpm --filter @nest-devtools/shared build && pnpm --filter @nest-devtools/frontend build"
+  publish = "packages/frontend/dist"
 
 [build.environment]
   NODE_VERSION = "20"
   PNPM_VERSION = "8"
 
 [[redirects]]
-  from = "/api/*"
-  to = "/.netlify/functions/:splat"
+  from = "/*"
+  to = "/index.html"
   status = 200
 
-[functions]
-  node_bundler = "esbuild"
-  directory = "packages/backend/dist"
+[[headers]]
+  for = "/*"
+  [headers.values]
+    X-Frame-Options = "DENY"
+    X-XSS-Protection = "1; mode=block"
+    X-Content-Type-Options = "nosniff"
+    Referrer-Policy = "strict-origin-when-cross-origin"
+
+[[headers]]
+  for = "/assets/*"
+  [headers.values]
+    Cache-Control = "public, max-age=31536000, immutable"
 
 # Environment variables (configure in Netlify UI):
-# DATABASE_URL - Supabase connection string
-# DEVTOOLS_API_KEY - Your API key
-# CORS_ORIGINS - Frontend URLs
+# VITE_API_URL - Backend API URL (https://seu-backend.up.railway.app/api)
+# VITE_WS_URL - WebSocket URL (https://seu-backend.up.railway.app)
 
