--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "@nest-devtools/shared": "workspace:*",
+    "@nestjs/axios": "^3.0.1",
     "@nestjs/common": "^10.3.0",
     "@nestjs/core": "^10.3.0",
     "@nestjs/platform-express": "^10.3.0",
@@ -25,6 +26,7 @@
     "@nestjs/typeorm": "^10.0.1",
     "@nestjs/config": "^3.1.1",
     "@nestjs/throttler": "^5.1.1",
+    "axios": "^1.6.5",
     "typeorm": "^0.3.19",
     "pg": "^8.11.3",
     "class-validator": "^0.14.1",
@@ -52,4 +54,3 @@
     "typescript": "^5.3.3"
   }
 }
-
