--- a/packages/frontend/netlify.toml
+++ b/packages/frontend/netlify.toml
@@ -1,17 +1,19 @@
-# Netlify configuration for Frontend
-
-[build]
-  command = "pnpm install && pnpm build"
-  publish = "dist"
-
-[build.environment]
-  NODE_VERSION = "20"
-  PNPM_VERSION = "8"
+# Netlify configuration específica do frontend
 
 [[redirects]]
   from = "/*"
   to = "/index.html"
   status = 200
 
-# SPA routing support
+[[headers]]
+  for = "/*"
+  [headers.values]
+    X-Frame-Options = "DENY"
+    X-XSS-Protection = "1; mode=block"
+    X-Content-Type-Options = "nosniff"
+    Referrer-Policy = "strict-origin-when-cross-origin"
 
+[[headers]]
+  for = "/assets/*"
+  [headers.values]
+    Cache-Control = "public, max-age=31536000, immutable"
