--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -11,9 +11,11 @@
     "typecheck": "tsc --noEmit",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
-    "migration:generate": "typeorm migration:generate -d src/config/typeorm.config.ts",
-    "migration:run": "typeorm migration:run -d src/config/typeorm.config.ts",
-    "migration:revert": "typeorm migration:revert -d src/config/typeorm.config.ts"
+    "prisma:generate": "prisma generate",
+    "prisma:migrate": "prisma migrate dev",
+    "prisma:deploy": "prisma migrate deploy",
+    "prisma:studio": "prisma studio",
+    "postinstall": "prisma generate"
   },
   "dependencies": {
     "@nest-devtools/shared": "workspace:*",
@@ -23,11 +25,10 @@
     "@nestjs/platform-express": "^10.3.0",
     "@nestjs/platform-socket.io": "^10.3.0",
     "@nestjs/websockets": "^10.3.0",
-    "@nestjs/typeorm": "^10.0.1",
     "@nestjs/config": "^3.1.1",
     "@nestjs/throttler": "^5.1.1",
+    "@prisma/client": "^5.22.0",
     "axios": "^1.6.5",
-    "typeorm": "^0.3.19",
     "pg": "^8.11.3",
     "class-validator": "^0.14.1",
     "class-transformer": "^0.5.1",
@@ -48,6 +49,7 @@
     "eslint-plugin-prettier": "^5.1.3",
     "jest": "^29.7.0",
     "prettier": "^3.2.4",
+    "prisma": "^5.22.0",
     "ts-loader": "^9.5.1",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
