refactor: update build process to use pnpm instead of Bun
- Changed Netlify build command to utilize pnpm for installation and building
- Removed package-lock.json and pnpm-lock.yaml files to streamline dependency management

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,7 @@
 # Netlify configuration for Frontend deployment
 
 [build]
-  command = "curl -fsSL https://bun.sh/install | bash && export PATH=\"$HOME/.bun/bin:$PATH\" && bun --version && bun run build:netlify"
+  command = "npm install -g pnpm@8 && pnpm install && cd packages/shared && pnpm run build && cd ../frontend && pnpm run build"
   publish = "packages/frontend/dist"
 
 [build.environment]
