fix: update Netlify build command to use absolute paths
- Modified build command to use absolute paths for the repository and publish directory
- Ensures consistency in the build process across different environments

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,9 +1,8 @@
 # Netlify configuration for Frontend deployment
 
 [build]
-  base = "."
-  command = "cd /opt/build/repo && bun install && cd packages/shared && bun run build && cd ../frontend && bun run build"
-  publish = "/opt/build/repo/packages/frontend/dist"
+  command = "bash ../../../scripts/netlify-build.sh || bash ../../scripts/netlify-build.sh || bash ../scripts/netlify-build.sh || bash scripts/netlify-build.sh"
+  publish = "packages/frontend/dist"
 
 [build.environment]
   NODE_VERSION = "20"
