fix: enhance Netlify build script to locate project root more effectively
- Updated the script to check for both package.json and the presence of a packages directory
- Added debug output for current working directory and files when the root is not found

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,7 @@
 # Netlify configuration for Frontend deployment
 
 [build]
-  command = "bash ../../../scripts/netlify-build.sh || bash ../../scripts/netlify-build.sh || bash ../scripts/netlify-build.sh || bash scripts/netlify-build.sh"
+  command = "cd ../.. && bash scripts/netlify-build.sh"
   publish = "packages/frontend/dist"
 
 [build.environment]
