fix: simplify Netlify build command for frontend deployment
- Updated build command to change directory before executing the script
- Streamlined path handling for improved clarity and reliability

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,8 @@
 # Netlify configuration for Frontend deployment
 
 [build]
-  command = "cd ../.. && bash scripts/netlify-build.sh"
+  base = "."
+  command = "bash scripts/netlify-build.sh"
   publish = "packages/frontend/dist"
 
 [build.environment]
