--- a/packages/agent/package.json
+++ b/packages/agent/package.json
@@ -15,7 +15,7 @@
     "clean": "rm -rf dist",
     "typecheck": "tsc --noEmit",
     "test": "jest",
-    "prepublishOnly": "pnpm build"
+    "prepublishOnly": "bun run build"
   },
   "keywords": [
     "nestjs",
@@ -49,7 +49,11 @@
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
     "reflect-metadata": "^0.1.13 || ^0.2.0",
-    "rxjs": "^7.0.0"
+    "rxjs": "^7.0.0",
+    "express": ">=4.0.0",
+    "typeorm": ">=0.3.0",
+    "bull": ">=4.0.0",
+    "@prisma/client": ">=5.0.0"
   },
   "dependencies": {
     "@nest-devtools/shared": "workspace:*",
@@ -59,8 +63,13 @@
     "@nestjs/common": "^10.3.0",
     "@nestjs/core": "^10.3.0",
     "@types/node": "^20.11.0",
+    "@types/express": "^4.17.21",
     "reflect-metadata": "^0.2.1",
     "rxjs": "^7.8.1",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "express": "^4.18.2",
+    "typeorm": "^0.3.20",
+    "bull": "^4.12.0",
+    "@prisma/client": "^5.22.0"
   }
 }
