--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -17,7 +17,7 @@
     "prisma:studio": "prisma studio"
   },
   "dependencies": {
-    "@nest-devtools/shared": "workspace:*",
+    "nest-devtools-shared": "workspace:*",
     "@nestjs/axios": "^3.0.1",
     "@nestjs/common": "^10.3.0",
     "@nestjs/core": "^10.3.0",
