--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -12,7 +12,7 @@
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0"
   },
   "dependencies": {
-    "@nest-devtools/shared": "workspace:*",
+    "nest-devtools-shared": "workspace:*",
     "@tanstack/react-query": "^5.17.19",
     "@tanstack/react-table": "^8.11.6",
     "@tabler/icons-react": "^2.44.0",
